# nfl-stats

./: Makefile  README.md  pyproject.toml
nfl_stats/: __init__.py  constants.py  gamelog.py
