[tool.poetry]
name = "nfl-stats"
version = "0.1.0"
description = "Python package for retreiving nfl data"
authors = ["Mark Herman <markherman29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.9"
black = "~22"
requests = "^2.28"
polars = "^0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
